--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,29 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.logo {
+  display: block;
+  float: left;
+  font-size: 2.5em;
+  font-weight: bold;
+  font-family: Helvetica;
+  letter-spacing: -3px;
+  padding-left: 1rem;
+  text-decoration: none;
+  color: #ef5419;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  margin-left: 2rem;
+  justify-content: space-around;
+  list-style: none;
+  padding: 1rem 1rem 0rem 0rem;
+}
+
+.menu a{
+  text-decoration: none;
+  color: black;
+
+}
