--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,33 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.logo {
-  display: block;
-  float: left;
+.header {
+  position: fixed;
+  width: 100%;
+border-bottom: 1px solid #ccc;
+background-color: white;
+display: flex;
+justify-content: space-between;
+}
+
+.header ul {
+  list-style: none;
+}
+
+.header li a {
+  padding: 1rem;
+  color: black;
+  text-decoration: none;
+}
+
+.header li a:hover,
+.header .menu-btn:hover {
+color: #ef5419;
+}
+
+ .logo {
+  display: flex;
+  justify-content: flex-start;
   font-size: 2.5em;
   font-weight: bold;
   font-family: Helvetica;
@@ -19,22 +43,31 @@ body {
 .menu {
   display: flex;
   flex-direction: row;
-  margin-left: 2rem;
   justify-content: flex-end;
-  list-style: none;
-  padding: 1rem 1rem 0rem 1rem;
+}
+.navicon {
+  display: none;
 }
 
-.menu a{
-  text-decoration: none;
-  color: black;
+@media (max-width: 48em) {
 
+.logo {
+ display: flex;
+ justify-content: flex-start;
+ font-size: 2em;
+ padding-bottom: 0.5rem;
+ font-weight: bold;
+ font-family: Helvetica;
+ letter-spacing: -3px;
+ padding-left: 1rem;
+ text-decoration: none;
+ color: #ef5419;
 }
-
-.menu li {
-  margin-left: 1rem;
+.menu {
+  display: none;
 }
-
-.header {
-  border-bottom: 1px solid #ccc;
+.navicon {
+  display: block;
+  margin-right: 1rem;
+}
 }
