--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,291 @@
-body {
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+code,
+del,
+dfn,
+em,
+q,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+dialog,
+figure,
+footer,
+header,
+hgroup,
+section {
   margin: 0;
-  font-family: Helvetica,Impact,Arial,sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-size: 100%;
+}
+/************************************************
+Table
+************************************************/
+body {
+  line-height: 1.5;
+}
+
+table,
+td,
+th {
+  vertical-align: middle;
+}
+
+a img {
+  border: none;
+}
+
+body,
+input {
+  color: #000;
+  font-weight: normal;
+  font-size: 87.5%;
+  line-height: 1.5em;
+  font-family: Helvetica, Impact, Arial, sans-serif;
+}
+
+h2 {
+  font-weight: bold;
+  clear: both;
+}
+
+h3 {
+  font-weight: normal;
+  font-style: italic;
+  x-color: #ef5419;
+  clear: both;
+}
+
+h4 {
+  color: #ef5419;
+}
+
+h6 {
+  color: #ef5419;
+  clear: both;
+}
+
+p,
+ul {
+  margin-bottom: 1rem;
+}
+
+a {
+  text-decoration: none;
+  padding-bottom: 1px;
+}
+
+a:link {
+  color: #000;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #000;
+  text-decoration: none;
+  border-bottom: 1px solid #666;
+}
+
+a:active {
+  color: #ef5419;
+}
+
+a:hover {
+  color: #ef5419;
+  text-decoration: none;
+}
+
+.unfiled {
+  color: #666;
+  text-decoration: line-through;
+}
+
+.catalog {
+  padding-top: 4rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+table {
+  table-layout: auto;
+  border-collapse: collapse;
+  margin-bottom: 1.5em;
+  width: 100%;
+  margin-right: 1rem;
+}
+
+td {
+  text-align: left;
+  vertical-align: top;
+}
+
+th.title {
+  width: auto;
+  padding-right: 1rem;
+}
+
+th.year,
+td.year {
+  text-align: right;
+  padding-right: 0.2em;
+}
+
+td {
+  border-bottom: 1px solid #ccc !important;
+  padding-bottom: 0.25em;
+  padding-top: 0.25em;
+}
+td a {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+.header h1 {
+  margin-top: 1.5em;
+}
+
+.footer {
+  align-items: flex-end;
+  color: #666;
+  padding-bottom: 1rem;
+}
+.icon {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+}
+
+.icon img {
+  width: 5rem;
+}
+
+/************************************************
+	Content
+************************************************/
+.block {
+  padding: 5rem 1rem 0rem 1rem;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+#freetext {
+  font-size: 1.5em;
+  line-height: 1.1;
+}
+
+#freetext p {
+  padding-bottom: 30px;
+}
+
+@media only screen and (min-width: 750px) {
+  #freetext {
+    width: 40vw;
+  }
+}
+
+@media only screen and (min-width: 750px) {
+}
+
+/************************************************
+	Filter
+************************************************/
+
+.hide {
+  -webkit-animation: fadeOut 150ms ease;
+  animation: fadeOut 150ms ease;
+  opacity: 0;
+}
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.hide {
+  display: none;
+}
+#controls {
+  border-bottom: 1px solid #ccc;
+  columns: 2;
+  width: 100%;
+  line-height: 2;
+}
+#controls ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+#controls ul li {
+  margin: 0;
+  padding-right: 0.5rem;
+  cursor: pointer;
+}
+#controls ul li:hover {
+  color: #ef5419;
+}
+@media (min-width: 700px) {
+  #controls {
+    border-bottom: 1px solid #ccc;
+    columns: 2;
+    width: 100%;
+  }
+  #controls ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+  }
+}
+#controls ul .active {
+  font-weight: bold;
+  color: #ef5419;
+}
+#controls ul .active:hover {
+  color: #ccc;
 }
