--- a/src/components/ProjectFilters/style.css
+++ b/src/components/ProjectFilters/style.css
@@ -9,6 +9,7 @@
   z-index: 2;
   padding: 1rem;
   border-bottom: 1px solid #ccc;
+  box-sizing: border-box;
 }
 #controls-container .toggle {
   cursor: pointer;
