--- a/src/index.css
+++ b/src/index.css
@@ -1,184 +1,131 @@
+a,
+abbr,
+acronym,
+address,
+article,
+aside,
+blockquote,
 body,
+caption,
+code,
+dd,
+del,
+dfn,
+dialog,
 div,
-span,
-object,
-iframe,
+dl,
+dt,
+em,
+fieldset,
+figure,
+footer,
+form,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-code,
-del,
-dfn,
-em,
-q,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-dialog,
-figure,
-footer,
 header,
 hgroup,
-section {
-  margin: 0;
-  padding: 0;
-  font-size: 100%;
+iframe,
+label,
+legend,
+li,
+object,
+ol,
+p,
+pre,
+q,
+section,
+span,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
+tr,
+ul {
+   margin   : 0;
+   padding  : 0;
+   font-size: 100%;
 }
 /************************************************
 Table
 ************************************************/
 html {
-  scroll-behavior: smooth;
+   scroll-behavior: smooth;
 }
 
 body {
-  line-height: 1.5;
-  min-height: 100vh;
+   line-height: 1.5;
+   min-height : 100vh;
 }
 
 a img {
-  border: none;
+   border: none;
 }
 
 body,
 input {
-  color: #000;
-  font-weight: normal;
-  font-size: 87.5%;
-  line-height: 1.5em;
-  font-family: Helvetica, Impact, Arial, sans-serif;
+   color      : #000;
+   font-weight: normal;
+   font-size  : 87.5%;
+   line-height: 1.5em;
+   font-family: Helvetica, Impact, Arial, sans-serif;
 }
 
 h2 {
-  font-weight: bold;
-  clear: both;
+   font-weight: bold;
+   clear      : both;
 }
 
 h3 {
-  font-weight: normal;
-  font-style: italic;
-  x-color: #ef5419;
-  clear: both;
+   font-weight: normal;
+   font-style : italic;
+   x-color    : #ef5419;
+   clear      : both;
 }
 
 h4 {
-  color: #ef5419;
+   color: #ef5419;
 }
 
 h6 {
-  color: #ef5419;
-  clear: both;
+   color: #ef5419;
+   clear: both;
 }
 
 p,
 ul {
-  margin-bottom: 1rem;
-}
-
-a {
-  text-decoration: none;
-  padding-bottom: 1px;
-}
-
-a:link {
-  color: #000;
-  text-decoration: none;
-}
-
-a:visited {
-  color: #000;
-  text-decoration: none;
-  border-bottom: 1px solid #666;
-}
-
-a:active {
-  color: #ef5419;
-}
-
-a:hover {
-  color: #ef5419;
-  text-decoration: none;
+   margin-bottom: 1rem;
 }
 
 .unfiled {
-  color: #666;
-  text-decoration: line-through;
+   color          : #666;
+   text-decoration: line-through;
 }
 
 .catalog {
-  padding-top: 4rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-.header h1 {
-  margin-top: 1.5em;
+   padding-top : 4rem;
+   margin-left : 1rem;
+   margin-right: 1rem;
 }
 
 .footer {
-  align-items: flex-end;
-  color: #666;
-  padding-bottom: 1rem;
+   align-items   : flex-end;
+   color         : #666;
+   padding-bottom: 1rem;
 }
+
 .icon {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
+   display        : flex;
+   justify-content: center;
+   padding-bottom : 1rem;
+   padding-top    : 1rem;
 }
 
 .icon img {
-  width: 5rem;
-}
-
-/************************************************
-	Content
-************************************************/
-.block {
-  padding: 5rem 1rem 0rem 1rem;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-#freetext {
-  font-size: 1.5em;
-  line-height: 1.1;
-}
-
-#freetext p {
-  padding-bottom: 30px;
-}
-
-@media only screen and (min-width: 750px) {
-  #freetext {
-    width: 40vw;
-  }
+   width: 5rem;
 }
