--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -37,8 +37,7 @@
   float: left;
   font-size: 2.4em;
   font-weight: bold;
-  font-family: Helvetica;
-  letter-spacing: -3px;
+  letter-spacing: -0.08rem;
   padding: 1rem 1rem 1rem 1rem;
   text-decoration: none;
   color: #ef5419;
