--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -43,7 +43,7 @@
   font-size: 2.4em;
   font-weight: bold;
   letter-spacing: -0.08rem;
-  padding: 1rem 1rem 1rem 1rem;
+  padding: 1rem 0 1rem 1rem;
   text-decoration: none;
   color: #ef5419;
 }
