--- a/src/tachyons.css
+++ b/src/tachyons.css
@@ -3732,7 +3732,7 @@ code {
     url("data:image/gif; base64, R0lGODdhEAAQAPEAAADw/wDx/xXy /////ywAAAAAEAAQAAACIZyPKckYDQFsb6ZqD85jZ2+BkwiRFKehhqQCQgDHcgwEBQA7")
     repeat 0 0;
 }
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 1000px) and (max-width: 1320px) {
   .aspect-ratio-ns {
     height: 0;
     position: relative;
