--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,136 +1,186 @@
 /* header */
-.header {
-   z-index         : 3;
-   position        : fixed;
-   width           : 100%;
-   border-bottom   : 1px solid rgba(0, 39, 67, 0.3);
-   background-color: white;
+.header
+{
+    position: fixed;
+    z-index: 3;
+
+    width: 100%;
+
+    border-bottom: 1px solid rgba(0, 39, 67, .3);
+    background-color: white;
 }
 
-.header-clearfix {
-   height : 54px;
-   display: block;
+.header-clearfix
+{
+    display: block;
+
+    height: 54px;
 }
 
-.header ul {
-   margin    : 0;
-   padding   : 0;
-   list-style: none;
-   overflow  : hidden;
+.header ul
+{
+    overflow: hidden;
+
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
 }
 
-.header li a {
-   display        : block;
-   padding        : 3px 20px;
-   color          : #001B44;
-   text-decoration: none;
+.header li a
+{
+    display: block;
+
+    padding: 3px 20px;
+
+    text-decoration: none;
+
+    color: #001b44;
 }
 
 .header .menu-icon:hover,
 .header li a.active,
-.header li a:hover {
-   color: #ef5419;
+.header li a:hover
+{
+    color: #ef5419;
 }
 
-.header li a.active {
-   font-weight: 600;
+.header li a.active
+{
+    font-weight: 600;
 }
 
-.header .logo {
-   display        : block;
-   float          : left;
-   font-size      : 2.4em;
-   font-weight    : bold;
-   letter-spacing : -0.08rem;
-   padding        : 1rem 0 1rem 1rem;
-   text-decoration: none;
-   color          : #ef5419;
+.header .logo
+{
+    font-size: 2.4em;
+    font-weight: bold;
+
+    display: block;
+    float: left;
+
+    padding: 1rem 0 1rem 1rem;
+
+    text-decoration: none;
+    letter-spacing: -.08rem;
+
+    color: #ef5419;
 }
 /* menu */
-.header .menu {
-   clear     : both;
-   max-height: 0;
-   transition: max-height 0.2s ease-out;
+.header .menu
+{
+    clear: both;
+
+    max-height: 0;
+
+    transition: max-height .2s ease-out;
 }
 /* menu icon */
-.header .menu-icon {
-   cursor     : pointer;
-   display    : inline-block;
-   float      : right;
-   padding    : 25px 20px;
-   position   : relative;
-   user-select: none;
+.header .menu-icon
+{
+    position: relative;
+
+    display: inline-block;
+    float: right;
+
+    padding: 25px 20px;
+
+    cursor: pointer;
+    user-select: none;
 }
 
-.header .menu-icon .navicon {
-   background: #001B44;
-   display   : block;
-   height    : 2px;
-   position  : relative;
-   transition: background 0.2s ease-out;
-   width     : 18px;
+.header .menu-icon .navicon
+{
+    position: relative;
+
+    display: block;
+
+    width: 18px;
+    height: 2px;
+
+    transition: background .2s ease-out;
+
+    background: #001b44;
 }
 
 .header .menu-icon .navicon:after,
-.header .menu-icon .navicon:before {
-   background: #001B44;
-   content   : '';
-   display   : block;
-   height    : 100%;
-   position  : absolute;
-   transition: all 0.2s ease-out;
-   width     : 100%;
+.header .menu-icon .navicon:before
+{
+    position: absolute;
+
+    display: block;
+
+    width: 100%;
+    height: 100%;
+
+    content: '';
+    transition: all .2s ease-out;
+
+    background: #001b44;
 }
 
-.header .menu-icon .navicon:before {
-   top: 6px;
+.header .menu-icon .navicon:before
+{
+    top: 6px;
 }
 
-.header .menu-icon .navicon:after {
-   top: -6px;
+.header .menu-icon .navicon:after
+{
+    top: -6px;
 }
 /* menu btn */
-.header .menu-btn {
-   display: none;
+.header .menu-btn
+{
+    display: none;
 }
 
-.header.expanded .menu {
-   max-height: 240px;
+.header.expanded .menu
+{
+    max-height: 240px;
 }
 
-.header.expanded .menu-icon .navicon {
-   background: transparent;
+.header.expanded .menu-icon .navicon
+{
+    background: transparent;
 }
 
-.header.expanded .menu-icon .navicon:before {
-   transform: rotate(-45deg);
+.header.expanded .menu-icon .navicon:before
+{
+    transform: rotate(-45deg);
 }
 
-.header.expanded .menu-icon .navicon:after {
-   transform: rotate(45deg);
+.header.expanded .menu-icon .navicon:after
+{
+    transform: rotate(45deg);
 }
 
 .header.expanded .menu-icon:not(.steps) .navicon:after,
-.header.expanded .menu-icon:not(.steps) .navicon:before {
-   top: 0;
+.header.expanded .menu-icon:not(.steps) .navicon:before
+{
+    top: 0;
 }
 /* 48em = 768px */
-@media (min-width: 48em) {
-   .header li {
-      float: left;
-   }
+@media (min-width: 48em)
+{
+    .header li
+    {
+        float: left;
+    }
 
-   .header li a {
-      padding: 16px 15px;
-   }
+    .header li a
+    {
+        padding: 16px 15px;
+    }
 
-   .header .menu {
-      clear     : none;
-      float     : right;
-      max-height: none;
-   }
+    .header .menu
+    {
+        float: right;
+        clear: none;
 
-   .header .menu-icon {
-      display: none;
-   }
+        max-height: none;
+    }
+
+    .header .menu-icon
+    {
+        display: none;
+    }
 }
