--- a/src/components/ProjectFilters/style.css
+++ b/src/components/ProjectFilters/style.css
@@ -1,70 +1,58 @@
 #controls-container-clearfix {
-  width: 100%;
-  height: 54px;
+	width: 100%;
+	height: 54px;
 }
-
 #controls-container {
-  width: 100%;
-  position: fixed;
-  background: white;
-  z-index: 2;
-  padding: 1rem;
-  border-bottom: 1px solid #ccc;
-  box-sizing: border-box;
+	position: fixed;
+	z-index: 2;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 1rem;
+	border-bottom: 1px solid #ccc;
+	background: white;
 }
-
 #controls-container .toggle {
-  cursor: pointer;
+	cursor: pointer;
 }
-
 #controls-container .wrapper {
-  overflow: hidden;
-  max-height: 0;
-  transition: max-height ease-out 0.3s;
-  will-change: max-height;
+	overflow: hidden;
+	max-height: 0;
+	transition: max-height ease-out .3s;
+	will-change: max-height;
 }
-
 #controls-container .wrapper.expanded {
-  max-height: 160px;
+	max-height: 160px;
 }
-
 #controls {
-  columns: 2;
-  width: 100%;
-  line-height: 2;
-  margin-top: 0.5rem;
+	line-height: 2;
+	width: 100%;
+	margin-top: .5rem;
+	columns: 2;
 }
-
 #controls ul {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 0;
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 0;
+	list-style: none;
 }
-
 #controls ul:last-child {
-  margin-left: -7px;
+	margin-left: -7px;
 }
-
 #controls ul li {
-  margin: 0;
-  padding-right: 0.5rem;
+	margin: 0;
+	padding-right: .5rem;
 }
-
 #controls ul li a {
-  width: 100%;
-  display: block;
+	display: block;
+	width: 100%;
 }
-
 #controls ul li:hover {
-  color: #ef5419;
+	color: #ef5419;
 }
-
 #controls ul .active {
-  font-weight: bold;
-  color: #ef5419;
+	font-weight: bold;
+	color: #ef5419;
 }
-
 #controls ul .active:hover {
-  color: #ccc;
+	color: #ccc;
 }
