--- a/src/tachyons.css
+++ b/src/tachyons.css
@@ -593,7 +593,7 @@ img {
 }
 
 .b--light-blue {
-  border-color: #96ccff;
+  border-color: #47b1ce;
 }
 
 .b--lightest-blue {
@@ -1843,7 +1843,7 @@ code {
 }
 
 .light-blue {
-  color: #96ccff;
+  color: #47b1ce;
 }
 
 .lightest-blue {
@@ -2071,7 +2071,7 @@ code {
 }
 
 .bg-light-blue {
-  background-color: #96ccff;
+  background-color: #47b1ce;
 }
 
 .bg-lightest-blue {
@@ -2495,7 +2495,7 @@ code {
 
 .hover-light-blue:focus,
 .hover-light-blue:hover {
-  color: #96ccff;
+  color: #47b1ce;
 }
 
 .hover-lightest-blue:focus,
@@ -2620,7 +2620,7 @@ code {
 
 .hover-bg-light-blue:focus,
 .hover-bg-light-blue:hover {
-  background-color: #96ccff;
+  background-color: #47b1ce;
 }
 
 .hover-bg-lightest-blue:focus,
