--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,186 +1,166 @@
 /* header */
-.header
-{
-    position: fixed;
-    z-index: 3;
+.header {
+	position: fixed;
+	z-index: 3;
 
-    width: 100%;
+	width: 100%;
 
-    border-bottom: 1px solid rgba(0, 39, 67, .3);
-    background-color: white;
+	border-bottom: 1px solid rgba(0, 39, 67, .3);
+	background-color: white;
 }
 
-.header-clearfix
-{
-    display: block;
+.header-clearfix {
+	display: block;
 
-    height: 54px;
+	height: 54px;
 }
 
-.header ul
-{
-    overflow: hidden;
+.header ul {
+	overflow: hidden;
 
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 
-    list-style: none;
+	list-style: none;
 }
 
-.header li a
-{
-    display: block;
+svg:hover #instagram {
+	fill: #ef5419;
+}
 
-    padding: 3px 20px;
+.header li a {
+	display: block;
 
-    text-decoration: none;
+	padding: 3px 20px;
 
-    color: #001b44;
+	text-decoration: none;
+
+	color: #001b44;
 }
 
 .header .menu-icon:hover,
 .header li a.active,
-.header li a:hover
-{
-    color: #ef5419;
+.header li a:hover {
+	color: #ef5419;
 }
 
-.header li a.active
-{
-    font-weight: 600;
+.header li a.active {
+	font-weight: 600;
 }
 
-.header .logo
-{
-    font-size: 2.4em;
-    font-weight: bold;
+.header .logo {
+	font-size: 2.4em;
+	font-weight: bold;
 
-    display: block;
-    float: left;
+	display: block;
+	float: left;
 
-    padding: 1rem 0 1rem 1rem;
+	padding: 1rem 0 1rem 1rem;
 
-    text-decoration: none;
-    letter-spacing: -.08rem;
+	text-decoration: none;
+	letter-spacing: -.08rem;
 
-    color: #ef5419;
+	color: #ef5419;
 }
 /* menu */
-.header .menu
-{
-    clear: both;
+.header .menu {
+	clear: both;
 
-    max-height: 0;
+	max-height: 0;
 
-    transition: max-height .2s ease-out;
+	transition: max-height .2s ease-out;
 }
 /* menu icon */
-.header .menu-icon
-{
-    position: relative;
+.header .menu-icon {
+	position: relative;
 
-    display: inline-block;
-    float: right;
+	display: inline-block;
+	float: right;
 
-    padding: 25px 20px;
+	padding: 25px 20px;
 
-    cursor: pointer;
-    user-select: none;
+	cursor: pointer;
+	user-select: none;
 }
 
-.header .menu-icon .navicon
-{
-    position: relative;
+.header .menu-icon .navicon {
+	position: relative;
 
-    display: block;
+	display: block;
 
-    width: 18px;
-    height: 2px;
+	width: 18px;
+	height: 2px;
 
-    transition: background .2s ease-out;
+	transition: background .2s ease-out;
 
-    background: #001b44;
+	background: #001b44;
 }
 
 .header .menu-icon .navicon:after,
-.header .menu-icon .navicon:before
-{
-    position: absolute;
+.header .menu-icon .navicon:before {
+	position: absolute;
 
-    display: block;
+	display: block;
 
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 
-    content: '';
-    transition: all .2s ease-out;
+	content: '';
+	transition: all .2s ease-out;
 
-    background: #001b44;
+	background: #001b44;
 }
 
-.header .menu-icon .navicon:before
-{
-    top: 6px;
+.header .menu-icon .navicon:before {
+	top: 6px;
 }
 
-.header .menu-icon .navicon:after
-{
-    top: -6px;
+.header .menu-icon .navicon:after {
+	top: -6px;
 }
 /* menu btn */
-.header .menu-btn
-{
-    display: none;
+.header .menu-btn {
+	display: none;
 }
 
-.header.expanded .menu
-{
-    max-height: 240px;
+.header.expanded .menu {
+	max-height: 240px;
 }
 
-.header.expanded .menu-icon .navicon
-{
-    background: transparent;
+.header.expanded .menu-icon .navicon {
+	background: transparent;
 }
 
-.header.expanded .menu-icon .navicon:before
-{
-    transform: rotate(-45deg);
+.header.expanded .menu-icon .navicon:before {
+	transform: rotate(-45deg);
 }
 
-.header.expanded .menu-icon .navicon:after
-{
-    transform: rotate(45deg);
+.header.expanded .menu-icon .navicon:after {
+	transform: rotate(45deg);
 }
 
 .header.expanded .menu-icon:not(.steps) .navicon:after,
-.header.expanded .menu-icon:not(.steps) .navicon:before
-{
-    top: 0;
+.header.expanded .menu-icon:not(.steps) .navicon:before {
+	top: 0;
 }
 /* 48em = 768px */
-@media (min-width: 48em)
-{
-    .header li
-    {
-        float: left;
-    }
+@media (min-width: 48em) {
+	.header li {
+		float: left;
+	}
 
-    .header li a
-    {
-        padding: 16px 15px;
-    }
+	.header li a {
+		padding: 16px 15px;
+	}
 
-    .header .menu
-    {
-        float: right;
-        clear: none;
+	.header .menu {
+		float: right;
+		clear: none;
 
-        max-height: none;
-    }
+		max-height: none;
+	}
 
-    .header .menu-icon
-    {
-        display: none;
-    }
+	.header .menu-icon {
+		display: none;
+	}
 }
