First release - iteration 1

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,26 +1,22 @@
 /* header */
 .header {
-	position: fixed;
-	z-index: 3;
-
-	width: 100%;
-
-	border-bottom: 1px solid rgba(0, 39, 67, .3);
+	position        : fixed;
+	z-index         : 3;
+	width           : 100%;
+	border-bottom   : 1px solid rgba(0, 39, 67, .3);
 	background-color: white;
+
 }
 
 .header-clearfix {
 	display: block;
-
-	height: 54px;
+	height : 60px;
 }
 
 .header ul {
-	overflow: hidden;
-
-	margin: 0;
-	padding: 0;
-
+	overflow  : hidden;
+	margin    : 0;
+	padding   : 0;
 	list-style: none;
 }
 
@@ -29,13 +25,9 @@ svg:hover #instagram {
 }
 
 .header li a {
-	display: block;
-
-	padding: 3px 20px;
-
+	display        : block;
 	text-decoration: none;
-
-	color: #001b44;
+	color          : #001b44;
 }
 
 .header .menu-icon:hover,
@@ -49,65 +41,48 @@ svg:hover #instagram {
 }
 
 .header .logo {
-	font-size: 2.4em;
-	font-weight: bold;
-
-	display: block;
-	float: left;
-
-	padding: 1rem 0 1rem 1rem;
-
+	font-size      : 2.4em;
+	font-weight    : bold;
+	display        : block;
+	float          : left;
+	padding        : 1rem 0 1rem 1rem;
 	text-decoration: none;
-	letter-spacing: -.08rem;
-
-	color: #ef5419;
+	letter-spacing : -.08rem;
+	color          : #ef5419;
 }
 /* menu */
 .header .menu {
-	clear: both;
-
+	clear     : both;
 	max-height: 0;
-
-	transition: max-height .2s ease-out;
+	transition: max-height 0.2s ease-out;
 }
 /* menu icon */
 .header .menu-icon {
-	position: relative;
-
-	display: inline-block;
-	float: right;
-
-	padding: 25px 20px;
-
-	cursor: pointer;
+	position   : relative;
+	display    : inline-block;
+	float      : right;
+	padding    : 25px 20px;
+	cursor     : pointer;
 	user-select: none;
 }
 
 .header .menu-icon .navicon {
-	position: relative;
-
-	display: block;
-
-	width: 18px;
-	height: 2px;
-
-	transition: background .2s ease-out;
-
+	position  : relative;
+	display   : block;
+	width     : 18px;
+	height    : 2px;
+	transition: background 0.2s ease-out;
 	background: #001b44;
 }
 
 .header .menu-icon .navicon:after,
 .header .menu-icon .navicon:before {
-	position: absolute;
-
-	display: block;
-
-	width: 100%;
-	height: 100%;
-
-	content: '';
-	transition: all .2s ease-out;
-
+	position  : absolute;
+	display   : block;
+	width     : 100%;
+	height    : 100%;
+	content   : '';
+	transition: all 0.2s ease-out;
 	background: #001b44;
 }
 
@@ -144,19 +119,18 @@ svg:hover #instagram {
 	top: 0;
 }
 /* 48em = 768px */
-@media (min-width: 48em) {
+@media (min-width: 812px) {
 	.header li {
 		float: left;
 	}
 
 	.header li a {
-		padding: 16px 15px;
+		padding: 18px 15px;
 	}
 
 	.header .menu {
-		float: right;
-		clear: none;
-
+		float     : right;
+		clear     : none;
 		max-height: none;
 	}
 
