--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -117,8 +117,17 @@ svg:hover #instagram {
 .header.expanded .menu-icon:not(.steps) .navicon:before {
   top: 0;
 }
+
+@media screen and (min-width: 601px) and (max-width: 768px) {
+
+   .header li a {
+     margin-right: 1.25rem;
+     padding-bottom: 1rem;
+   }
+}
+
 /* 48em = 768px */
-@media (min-width: 812px) {
+@media (min-width: 768px) {
   .header li {
     float: left;
   }
