--- a/src/components/CaseStudies/style.css
+++ b/src/components/CaseStudies/style.css
@@ -1,5 +1,5 @@
 .accordion {
-   border       : 1px solid rgba(0, 0, 0, 0.1);
+
    border-radius: 2px;
 }
 
@@ -43,6 +43,7 @@
 }
 
 .accordion__panel {
+   border       : 1px solid #f4f4f4;
    padding  : 20px;
    animation: fadein 0.35s ease-in;
 }
