--- a/src/projectsProvider/style.css
+++ b/src/projectsProvider/style.css
@@ -25,8 +25,10 @@
 	}
 }
 
-.sticky {
-	position: -webkit-sticky;
-	position: sticky;
-	top: 1rem;
+
+
+.two-half {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-gap: 1rem;
 }
