--- a/src/projectsProvider/style.css
+++ b/src/projectsProvider/style.css
@@ -1,5 +1,5 @@
 .gridp {
-	margin: 1rem;
+
 	display: grid;
 	grid-template-columns: 1fr;
 }
@@ -32,3 +32,44 @@
 	grid-template-columns: 1fr;
 	grid-gap: 1rem;
 }
+
+.grid-3 {
+	display: grid;
+}
+
+@media (min-width: 600px) {
+	.grid-3 {
+		grid-template-columns: repeat(1, 1fr);
+		grid-gap: 1rem;
+	}
+}
+
+@media (min-width: 300px) {
+	.grid-3 {
+		grid-template-columns: repeat(1, 1fr);
+		grid-gap: 1rem;
+	}
+}
+
+@media (min-width: 900px) {
+	.grid-3 {
+		grid-template-columns: repeat(3, 3fr);
+    grid-gap: 1rem;
+	}
+}
+
+.resp-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+}
+
+.resp-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
