--- a/src/components/CaseStudies/style.css
+++ b/src/components/CaseStudies/style.css
@@ -1,24 +1,24 @@
 .accordion {
-
+   border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: 2px;
 }
 
-.accordion__item + .accordion__item {
+.accordion__item+.accordion__item {
    border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .accordion__button {
    background-color: #f4f4f4;
-   color           : #001B44;
-   cursor          : pointer;
-   padding         : 18px;
-   width           : 100%;
-   text-align      : left;
-   border          : none;
-   display         : flex;
-   flex-direction  : row-reverse;
-   justify-content : space-between;
-   outline         : none;
+   color: #001B44;
+   cursor: pointer;
+   padding: 18px;
+   width: 100%;
+   text-align: left;
+   border: none;
+   display: flex;
+   flex-direction: row-reverse;
+   justify-content: space-between;
+   outline: none;
 }
 
 .accordion__button:hover {
@@ -26,15 +26,15 @@
 }
 
 .accordion__button:before {
-   display      : flex;
-   align-self   : center;
-   content      : '';
-   height       : 10px;
-   width        : 10px;
-   margin-right : 12px;
+   display: flex;
+   align-self: center;
+   content: '';
+   height: 10px;
+   width: 10px;
+   margin-right: 12px;
    border-bottom: 2px solid currentColor;
-   border-right : 2px solid currentColor;
-   transform    : rotate(-45deg);
+   border-right: 2px solid currentColor;
+   transform: rotate(-45deg);
 }
 
 .accordion__button[aria-expanded='true']::before,
@@ -43,10 +43,11 @@
 }
 
 .accordion__panel {
-   border       : 1px solid #f4f4f4;
-   padding  : 20px;
+   border: 1px solid #f4f4f4;
+   padding: 20px;
    animation: fadein 0.35s ease-in;
 }
+
 @keyframes fadein {
    0% {
       opacity: 0;
@@ -56,4 +57,3 @@
       opacity: 1;
    }
 }
-
