--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -82,7 +82,7 @@ svg:hover #instagram {
   display: block;
   width: 100%;
   height: 100%;
-  content: '';
+  content: "";
   transition: all 0.2s ease-out;
   background: #001b44;
 }
@@ -106,6 +106,7 @@ svg:hover #instagram {
 
 .header.expanded .menu-icon .navicon {
   background: transparent;
+  pointer-events: none;
 }
 
 .header.expanded .menu-icon .navicon:before {
@@ -122,7 +123,6 @@ svg:hover #instagram {
 }
 
 @media screen and (min-width: 601px) and (max-width: 768px) {
-
   .header li a {
     margin-right: 1.25rem;
     padding-bottom: 1rem;
